--- a/Xamarin_AndroidTeste1/Resources/layout/Main.axml
+++ b/Xamarin_AndroidTeste1/Resources/layout/Main.axml
@@ -54,4 +54,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView_pesqNomeUtente" />
+    <Button
+        android:text="Outra Janela"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonOutra" />
 </LinearLayout>
