--- a/Xamarin_AndroidTeste1/Resources/layout/Outra.axml
+++ b/Xamarin_AndroidTeste1/Resources/layout/Outra.axml
@@ -3,5 +3,16 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <TextView
+        android:text="Outra "
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView_outra" />
+    <GridView
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/gridView_teste" />
 </LinearLayout>
