--- a/Xamarin_AndroidTeste1/Resources/layout/Outra.axml
+++ b/Xamarin_AndroidTeste1/Resources/layout/Outra.axml
@@ -9,10 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView_outra" />
-    <GridView
+    <ListView
         android:minWidth="25px"
         android:minHeight="25px"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/gridView_teste" />
+        android:layout_height="match_parent"
+        android:id="@+id/listView" />
 </LinearLayout>
